fix brang svg vertical align

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -5,4 +5,8 @@ body {
 .navbar-brand {
     padding-top: 0.625rem;
     padding-bottom: 0.625rem;
+
+    svg {
+        margin-top: -6px;
+    }
 }
